# Mercearia

./: README.md  db.sqlite3  hello.py  pyproject.toml
app/: views.py
categorias/: admin.py  context_processors.py  models.py
categorias/migrations/: 0001_initial.py  0002_alter_categorias_slug.py  0003_rename_descricao_categorias_categoria_descricao_and_more.py
mercearia/: settings.py  urls.py
produtos/: admin.py  models.py  urls.py  views.py
produtos/migrations/: 0001_initial.py
templates/: base.html  home.html
templates/includes/: navbar.html
templates/loja/: loja.html  produto_detalhe.html
