[project]
name = "mercearia-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.7",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
run = "uv run manage.py runserver"

makemigrate = "uv run manage.py makemigrations"
migrate = "uv run manage.py migrate"

collectstatic = "uv run manage.py collectstatic"